Fixed top wrap bar

--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -1,11 +1,12 @@
 #topwrap {
     position: relative;
     background-color: #fff;
-    font-size: 12px;
-    border-bottom: 1px solid #f1f1f1;
+    font-size: 0.8em;
+    // border-bottom: 1px solid #f1f1f1;
     z-index: 101;
     margin-left: 1rem;
-    padding-bottom: 0.3rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.4em;
 }
 
 #top {
